# FeedforwardNeuralNetwork

./: .gitignore  CMakeLists.txt  FeedForwardLayer.cpp  FeedForwardLayer.h  FeedforwardNeuralNet.cpp  FeedforwardNeuralNet.h  Layer.cpp  Layer.h  MNISTNeuralNet.cpp  MNISTNeuralNet.h  MNISTPicture.cpp  MNISTPicture.h  MNISTReader.cpp  MNISTReader.h  Matrix.cpp  Matrix.h  Neuron.cpp  Neuron.h  README.md  Randomizer.cpp  Randomizer.h  Stopwatch.hpp  main.cpp  testing_playground.cpp
